# exported

./: 11.dmm.csv  processing.ipynb  pyproject.toml  readme.md
.ipynb_checkpoints/: processing-checkpoint.ipynb
.virtual_documents/: processing.ipynb
.virtual_documents/plots/: 10_31
.virtual_documents/plots/20_3beam_demo/: 20_3beam_demo.ipynb
.virtual_documents/plots/30_contact_resistance/: contact resistance.ipynb
.virtual_documents/plots/50_beam_bending/: 10_31  50_beam_bending.ipynb
.virtual_documents/plots/50_cf_characterization/: 50_cf_characterization.ipynb
.virtual_documents/plots/60_v2_sensors/: 60_v2_sensors.ipynb  Untitled.ipynb
plots/10_31#1_working/: 10_31#1_working.ipynb
plots/10_31#1_working/.ipynb_checkpoints/: 10_31#1_working-checkpoint.ipynb  fsr_large.dmm-checkpoint.csv
plots/20_3beam_demo/: 1.dmm.csv  2.dmm.csv  20_3beam_demo.ipynb  3.dmm.csv  4.dmm.csv  5.dmm.csv  6.dmm.csv  program.lif
plots/20_3beam_demo/.ipynb_checkpoints/: 20_3beam_demo-checkpoint.ipynb
plots/30_contact_resistance/: contact resistance.ipynb
plots/30_contact_resistance/.ipynb_checkpoints/: contact resistance-checkpoint.ipynb
plots/30_contact_resistance/data/: dmm.01.csv  dmm.03.csv  dmm.06.csv  dmm.08.csv  dmm.09.csv  dmm.102.csv  dmm.103.csv  dmm.104.csv  dmm.106.csv  dmm.108.csv  dmm.11.csv  dmm.110.csv  (+102 more)
plots/40_grasping/: 0.dmm.csv  31#4_recapped_grasping.dmm.csv  fsr_grasping.dmm.csv  testing.ipynb
plots/50_beam_bending/: 50_beam_bending.ipynb
plots/50_cf_characterization/: 50_cf_characterization.ipynb
plots/60_v2_sensors/: 60_v2_sensors.ipynb
(+79 files in other folders)
